# tapper

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cc  resources.qrc  tapper.cc  tapper.h
src/contents/ui/: main.qml
